[tool.poetry]
name = "deamon-heimdall"
version = "0.1.0"
description = ""
authors = ["cutmasta-kun <valerij.molodew@web.de>"]
readme = "README.md"
packages = [{include = "deamon_heimdall"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
opencv-python = "^4.7.0.72"
python-pygaze = "^0.7.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
